Analyser connected. First tests
Bugfixes in progress. Left cases 2 to 4 in the analyser as before to be able to backtrack to them if necessary